# My_Engine_Code_Part

./: CMakeLists.txt  LICENSE  README.md  main.cpp
core/: base_math.h  log.cpp  log.h  string_ex.h  timer.cpp  timer.h  types.h
editor/: editor_main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openglwidget.cpp  openglwidget.h  treewidget.cpp  treewidget.h
render/: material.cpp  material.h  parameter.cpp  parameter.h  pass.cpp  pass.h  renderer.cpp  renderer.h  shader.cpp  shader.h  technique.cpp  technique.h  texture.cpp  texture.h  variant.cpp  variant.h
render/device/: gl_helper.cpp  gl_helper.h  gpu_obj.h  gpu_program.h  gpu_types.h
resource/: animation.cpp  animation.h  assimp_to_glm.cpp  assimp_to_glm.h  image.cpp  image.h  resource.h  resource_mgr.cpp  resource_mgr.h
resource/loader/: image_loader.cpp  image_loader.h  load_file_type.h  loader_trait.h  resource_loader.cpp  resource_loader.h  texture_loader.cpp  texture_loader.h
samples/: sample1.cpp  sample2.cpp
scene/: app.cpp  app.h  camera.cpp  camera.h  light.cpp  light.h  light_manager.cpp  light_manager.h  model.cpp  model.h  scene_node.cpp  scene_node.h  skinned_model.cpp  skinned_model.h
shader_parser/: ast.c  ast.h  lexer.c  lexer.h  parser.c  parser.h  shader_compiler.cpp  shader_compiler.h
